tests/did-you-mean.wpl
print "hello"
show hello
sum : 1 + 2 // comment
